--- a/style.css
+++ b/style.css
@@ -5,23 +5,23 @@
     margin: 20px 20px 20px 50%;
     font-size: 18px;}
 .inl .a{margin: 10px 10px;
-    color: rgb(17, 17, 17);
+    color: white;
     text-decoration: none;} 
 .bl{
     /* margin-left: 30%; */
-    padding-left: 20%;
+    padding-left: 35%;
     /* margin-top: 30px; */
     padding-top: 30px;
     height: 40px
 }
 a:hover{color: #08081a;} 
-.inl a:hover{color: #08081a;} 
+.inl a:hover{color: #5f5fc9;} 
 .aa{font-size: 18px;}
 .aa, .a3{color: rgb(245, 240, 240);
-    padding-left: 15px;}
+    /* padding-left: 5px; */
+}
 .a3{font-size: 18px;
     text-decoration: none;}
-body{background: rgb(22, 22, 22);}
 /* .bg{background: rgb(217, 188, 245);} */
 .pp{width: 150px;
     height: 160px;
@@ -36,21 +36,26 @@ body{background: rgb(22, 22, 22);}
     grid-template-columns: 65% 35%;
     justify-self: center;
     padding-top: 150px;}
-/* .fl{width: 150px;
-   height: 200px;
-    float: left;} */
-body {background: rgb(203, 203, 240);}
+.fl{width: 150px;
+   height: 170px;
+    float: left;}
+/* body {background: white;} */
+body {background-image: url(photo/IMG1.jpg);
+    background-size: 100%;}
 .back {text-decoration: none;
-    background-color: rgba(12, 11, 240, 0.932);
-    margin-left: 90%;
+    background-color: rgba(255, 255, 255, 0.26);
+    margin-left: 81%;
     margin-top: 40px;}
 .back a{ text-decoration: none;}
 .about, .p1{width: 80%;
     padding-left: 10%;
     padding-top: 20px;}
+.about{
+    justify-content: space-between;
+}
 body .h11{padding-top: 20px;}
-.port{text-align: center;}
+#port{text-align: center;}
 .bl {
-    background-color: rgb(105, 105, 248);
+    background-color: rgb(12, 12, 12);
 }
 
